--- a/src/styles.css
+++ b/src/styles.css
@@ -35,14 +35,14 @@ li {
     
 }
 html {
-    background-image: url("borgir.jpg");
+    background-image: url("images/burger.jpg");
     color: white;
     font-family: monospace;
      /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover;
-  height: 100%;
-  overflow: hidden;
+  /*height: 100%;
+  overflow: hidden; */
 }
 
 .topHours {
@@ -52,4 +52,20 @@ html {
 
 .bottomHours , .mainText {
    /* font-size: 1.5em; */
+}
+
+img {
+    width: 410px;
+    height: 300px;
+    border: 5px solid black;
+}
+
+.menuItem{
+    width: 410px;
+}
+h2 {
+    text-align: center;
+}
+p {
+    text-align: center;
 }
