webpage tabs logic updated

--- a/src/styles.css
+++ b/src/styles.css
@@ -50,9 +50,7 @@ html {
     font-size: 2em;
 }
 
-.bottomHours , .mainText {
-   /* font-size: 1.5em; */
-}
+
 
 img {
     width: 410px;
@@ -73,7 +71,15 @@ p {
 .hmebtn:hover ,
 .menubtn:hover,
 .contactbtn:hover {
-
     cursor: pointer;
+    text-decoration: underline;
 
+}
+
+.hide {
+    display: none;
+}
+
+.show {
+    display: block;
 }
