--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,7 @@ li {
     font-size: 2em;
     align-content: center;
     text-align: center;
+    margin-left: 50px;
 }
 .hours {
     display: flex;
@@ -20,6 +21,8 @@ li {
     justify-content: center;
     align-items: center;
 }
+
+
 
 .mainText {
     
@@ -60,7 +63,7 @@ img {
 }
 
 .normalimg {
-    width: 600px;
+    width: 700px;
     height: 300px;
 
 }
